--- a/css/style.css
+++ b/css/style.css
@@ -2,40 +2,63 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    border: none;
 }
 
 /* onde acontece o jogo */
 .game-board {
     width: 100%;
     margin: 0 auto;
-    height: 500px;
-    border-bottom: 15px solid #05b105;
+    height: 100vh;
+    border-bottom: 45px solid #05b105;
     position: relative;
-    overflow: hidden; /* tudo o que sair do board não aparece na tela*/
+    overflow: hidden;
+    /* tudo o que sair do board não aparece na tela*/
     background: linear-gradient(#1c91f8, #91f0fb);
 }
 
-.clouds{
+.start-game {
+    width: 50%;
+    position: absolute;
+    top: 30%;
+    left: 25%;
+}
+
+.clouds {
     position: absolute;
     width: 500px;
+    margin-top: 10px;
     animation: clouds-animation 20s linear infinite;
 }
 
 .mario {
-    position: absolute; /* posição absoluta */
-    bottom: 0; /* posição do mario, em baixo*/
-    width: 150px; /* largura do personagem */
+    position: absolute;
+    /* posição absoluta */
+    bottom: 0;
+    /* posição do mario, em baixo*/
+    width: 150px;
+    /* largura do personagem */
 }
 
 .jump {
-    animation: mario-jump 500ms ease-out; /* animação do personagem */
+    animation: mario-jump 600ms ease-out;
+    /* animação do personagem */
 }
 
 .pipe {
-    position: absolute; /* posição absoluta para não interferir nas outras imagens */
-    bottom: 0; /* posição do pipe, em baixo */
-    width: 80px; /* largura do pipe */
-    animation: pipe-animation 2s infinite linear;
+    position: absolute;
+    /* posição absoluta para não interferir nas outras imagens */
+    bottom: 0;
+    /* posição do pipe, em baixo */
+    width: 80px;
+    /* largura do pipe */
+    animation: pipe-animation 1.5s infinite linear;
+}
+
+.audio {
+    position: absolute;
+    right: 0;
+    margin: auto;
 }
 
 /* animação das nuvens */
@@ -51,19 +74,28 @@
 
 /* A animação do mario pulando */
 @keyframes mario-jump {
-    0% { /* inicio da animação */
+    0% {
+        /* inicio da animação */
         bottom: 0;
     }
-    40% { /* quando o mario começa a pular */
+
+    40% {
+        /* quando o mario começa a pular */
         bottom: 180px;
     }
-    50% { /* meio da animação */
+
+    50% {
+        /* meio da animação */
         bottom: 180px;
     }
-    60% { /* quando o mario começa a cair  */
+
+    60% {
+        /* quando o mario começa a cair  */
         bottom: 180px;
     }
-    100% { /* fim da animação */
+
+    100% {
+        /* fim da animação */
         bottom: 0;
     }
 }
@@ -73,8 +105,8 @@
     from {
         right: -80px;
     }
+
     to {
         right: 100%;
     }
 }
-    
